# flask-weather

./: .dockerignore  .env.example  .gitignore  Dockerfile  Gemfile  README.md  README.ru.md  docker-compose.with-pg.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml  deploy.yml  vps-setup.yml
.kamal/: secrets
app/: admin.py  admin_auth.py  admin_views.py  cli.py  extensions.py  factory.py  memory_log.py  models.py  scheduler.py  vcr_setup.py
app/blueprints/: auth.py  cities.py  main.py  settings.py
app/services/: city_service.py  geocoding.py  user_service.py  weather.py  weather_codes.py
app/templates/: base.html
config/: deploy.yml
docs/example-postgresql-docker-compose/: .env.example  README.md  docker-compose.yml
e2e/: package-lock.json  package.json  playwright.config.ts  tsconfig.json
e2e/e2e_cassettes/: e2e_weather_mocks.yaml
e2e/tests/: admin-navigation.spec.ts  app.spec.ts  auth.spec.ts  cities.spec.ts  logs.spec.ts  scheduler.spec.ts  settings.spec.ts  tools.spec.ts
instance/: e2e_local.db
migrations/: alembic.ini  env.py
migrations/versions/: 001_initial.py  002_add_snow_depth.py  003_city_location_fields.py  004_weather_extended_fields.py  005_seed_app_settings.py  006_unique_city_observed_at.py  007_weather_sources_and_owm_records.py  008_rename_weather_records_to_om.py  009_extended_weather_fields.py  (+2 more)
scripts/: record_cassette.py  setup-vps.sh
tests/: conftest.py  test_app.py  test_geocoding.py  test_memory_log.py  test_scheduler_ui.py  test_weather.py
(+15 files in other folders)
